Corrigindo palavras-chave.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Lucas-Souto/Brogui.git"
   },
   "keywords": [
-    "framework",
+    "tool",
     "blog",
     "web"
   ],
